Implement add remove and read status
Implement add and remove book logic and read status toggle

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="header">
         <h2>Library</h2>
         <button type="button" class="add-book-button">New Book</button>
+        <button type="button" class="random-book-button">Random Books</button>
     </div>
     <div class="bookshelf">
-
     </div>
 </body>
 </html>
